overflow x fix

--- a/src/main/reset.scss
+++ b/src/main/reset.scss
@@ -29,6 +29,7 @@ dd {
 }
 
 html {
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
