--- a/src/scss/tariffs.scss
+++ b/src/scss/tariffs.scss
@@ -106,9 +106,7 @@
       display: block;
     }
 
-    h5 {
-      width: 383px;
-    }
+    
 
     &__left {
       width: 100%;
